fix detail list fonts on mobile

--- a/src/components/CharacterDetail/CharacterDetail.scss
+++ b/src/components/CharacterDetail/CharacterDetail.scss
@@ -106,7 +106,9 @@
     padding-left: 10px;
     font-family: $font-secondary;
     font-size: 14px;
+    color: white;
     @media (min-width: 768px) {
+      color: $color-tertiary;
       transform: translate(10px, -30px);
       font-size: 16px;
       background-color: rgba(255, 255, 255, 0.5);
